# qg_botsdk

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  __init__.py  logger.py  package.json  pnpm-lock.yaml  pyproject.toml  qg_bot.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: black.yml  codecov.yml  codeql.yml  publish.yml  (+1 more)
docs/: API.md  ApiModel.md  Model库.md  Plugins插件开发.md  SDK组件.md  conf.py  index.md  index.rst  pyproject.toml  requirements.txt  常见问题Q&A.md  快速入门.md  简介.md  联系与反馈.md
example/: example_1(简单工作流).py  example_1.py  example_10(发送本地图片).py  example_11(使用异步api).py  example_12(markdown).py  example_13(装饰器).py  example_13_plugins.py  example_14(非阻塞性运行).py  example_15(session,wait_for).py  example_16(Q群简单工作流).py  example_17(WebHook).py  example_18(RemoteWebHook_local).py  example_18(RemoteWebHook_server).py  example_2(使用腾讯内容检测接口).py  example_2.py  example_3(注册开始事件).py  example_3.py  example_4(论坛事件).py  example_4.py  example_5(表情表态).py  example_6(创建子频道).py  example_7(监听审核事件).py  example_8(创建身份组、私信).py  example_9(表情表态).py  example_9(表情表态、更改log格式).py  example_register_stop_event.py
qg_botsdk/: __init__.py  _api_model.py  _event.py  _exception.py  _proto_events_conversion.py  _queue.py  _seq_cache.py  _session.py  _statics.py  _utils.py  api.py  api_model.py  async_api.py  http.py  logger.py  model.py  plugins.py  qg_bot.py  qg_bot_proto.py  qg_bot_ws.py  sandbox.py  session.py  utils.py  version.py
test/: _base_context.py  _testing_plugin.py  conftest.py  requirements.txt  test_api.py  test_base.py  test_run.py  test_session.py
(+19 files in other folders)
