[metadata]
name = qg-botsdk
version = 2.5.5
author = GDLY
author_email = tzlgdly@gmail.com
description = easy-to-use SDK for Tencent QQ guild robot
url = https://github.com/GLGDLY/qg_botsdk
keywords = sample, example, setuptools

[options]
python_requires = >=3.7, <4
install_requires =
    aiohttp>=3.8.1, <4

[flake8]
ignore = E203, W503
